--- a/STYLES.CSS
+++ b/STYLES.CSS
@@ -17,7 +17,7 @@ div{
    border: 10px ridge black;
    width: 220s;
    background-image: url(./MicrosoftTeams-image.png);
-   color: #ff0000;
+   color: #66ffff;
    font-size: 150%;
    font-weight: 2000;
 }
